--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ compile 'org.grails:grails-datastore-gorm-hibernate-core:5.0.4.RELEASE'
   compile "org.grails.plugins:hibernate"
   compile "org.grails.plugins:cache"
   compile "org.hibernate:hibernate-ehcache"
+  
+      compile 'org.grails.plugins:mail:2.0.0.RC6'
+
 
   runtime "org.grails.plugins:asset-pipeline"
   runtime "org.grails.plugins:scaffolding"
